--- a/03-Method_Measures.Rmd
+++ b/03-Method_Measures.Rmd
@@ -96,27 +96,27 @@ Eating disorder diagnoses (AN, BN,BED, purging disorder [PD], and Other Specifie
 
 Diagnoses were assessed at Waves14+, 16+, 18+, and 24+. Body mass index (BMI), which is an objective measure, was also collected at face to face assessment (median ages: 13.8, 15.5, 17.8, and 24.0) and used as a diagnostic criteria for AN. Furthermore, an underweight assignment wasdetermined using age, gender, and BMI-specific cutoffs (based on UK reference data); corresponding to World Health Organization (WHO) grade 1 thinness [@coleBodyMassIndex2007]. Excessive exercise, which is used as criteria for an AN and OSFED diagnoses, was assigned to the adolescent if they found themselves lacking time to do schoolwork due to engaging in exercise, exercising when sick or injured, and feeling guilt when unable to exercise.
 
-| **Table X. Diagnostic Criteria**                                    |                 |                                                                                                                                                                                                              |                                                                                                                                                                                                              |                                                                                                                                                                                                              |                                                                                    |
-|------------|------------|------------|------------|------------|------------|
-| **Diagnoses**                                                       | **Report Type** | **Wave 14+**                                                                                                                                                                                                 | **Wave 16+**                                                                                                                                                                                                 | **Wave 18+**                                                                                                                                                                                                 | **Wave 24+**                                                                       |
-| Anorexia Nervosa (AN)                                               | Self-report     | 1.Underweight (body mass index [BMI]\<18.5)                                                                                                                                                                  | 1.Underweight (BMI\<18.5)                                                                                                                                                                                    | 1\. engaged in fasting for weight loss or to avoid weight gain at least monthly                                                                                                                              | 1.Underweight (BMI\<18.5)                                                          |
-|                                                                     |                 | AND 2. self-reported weight and shape concern                                                                                                                                                                | AND 2. engaged in fasting for weight loss or to avoid weight gain at least monthly                                                                                                                           | OR engaged in excessive exercise                                                                                                                                                                             | AND 2. engaged in fasting for weight loss or to avoid weight gain at least monthly |
-|                                                                     |                 | OR engaged in fasting for weight loss or to avoid weight gain at least monthly                                                                                                                               | OR engaged in excessive exercise                                                                                                                                                                             |                                                                                                                                                                                                              | OR engaged in excessive exercise                                                   |
-|                                                                     |                 | OR engaged in excessive exercise                                                                                                                                                                             |                                                                                                                                                                                                              |                                                                                                                                                                                                              |                                                                                    |
-|                                                                     | Parental Report | 1\. Underweight (BMI\<18.5)                                                                                                                                                                                  | 1\. Underweight (BMI\<18.5)                                                                                                                                                                                  |                                                                                                                                                                                                              |                                                                                    |
-|                                                                     |                 | AND 2. Presence of fear of weight gain AND fat avoidance in the 3 months prior to assessment                                                                                                                 | 2\. Presence of fear of weight gain AND fat avoidance in the 3 months prior to assessment                                                                                                                    |                                                                                                                                                                                                              |                                                                                    |
-| Bulimia Nervosa (BN)                                                | Self-Report     | 1.Weekly binge eating                                                                                                                                                                                        | 1.Weekly binge eating                                                                                                                                                                                        | 1.Weekly binge eating                                                                                                                                                                                        | 1.Weekly binge eating                                                              |
-|                                                                     |                 | AND 2. weekly purging                                                                                                                                                                                        | AND 2. weekly purging                                                                                                                                                                                        | AND 2. weekly purging                                                                                                                                                                                        | AND 2. weekly purging                                                              |
-| Binge Eating Disorder (BED)                                         | Self-Report     | 1\. Weekly binge eating                                                                                                                                                                                      | 1.Weekly binge eating                                                                                                                                                                                        | 1.Weekly binge eating                                                                                                                                                                                        | 1\. Weekly binge eating                                                            |
-|                                                                     |                 | AND 2. At least 3 cognitive symptoms (eating fast or faster than normal; eating until stomach hurt or they felt sick, eating large amounts when not hungry, eating alone, feeling guilty about amount eaten) | AND 2. At least 3 cognitive symptoms (eating fast or faster than normal; eating until stomach hurt or they felt sick, eating large amounts when not hungry, eating alone, feeling guilty about amount eaten) | AND 2. At least 3 cognitive symptoms (eating fast or faster than normal; eating until stomach hurt or they felt sick, eating large amounts when not hungry, eating alone, feeling guilty about amount eaten) | AND 2. Absence of purging                                                          |
-|                                                                     |                 | AND 3. Absence of purging                                                                                                                                                                                    | AND 3. Absence of purging                                                                                                                                                                                    | AND 3. Absence of purging                                                                                                                                                                                    |                                                                                    |
-| Purging Disorder                                                    | Self-Report     | 1\. Purging at least weekly                                                                                                                                                                                  | 1\. Purging at least weekly                                                                                                                                                                                  | 1\. Purging at least weekly                                                                                                                                                                                  | 1\. Purging at least weekly                                                        |
-|                                                                     |                 | 1\. AND 2. Binge eating absent or \< monthly                                                                                                                                                                 | AND 2. Binge eating absent or \< monthly                                                                                                                                                                     | AND 2. Binge eating absent or \< monthly                                                                                                                                                                     | AND 2. Binge eating absent or \< monthly                                           |
-| Sub-threshold BN (Sub-BN)                                           | Self-Report     | 1\. monthly binge eating                                                                                                                                                                                     | 1\. monthly binge eating                                                                                                                                                                                     | 1\. monthly binge eating                                                                                                                                                                                     | 1\. monthly binge eating                                                           |
-|                                                                     |                 | AND 2. monthly purging                                                                                                                                                                                       | AND 2. monthly purging                                                                                                                                                                                       | AND 2. monthly purging                                                                                                                                                                                       | AND 2. monthly purging                                                             |
-| Sub-threshold BED (Sub-BED)                                         | Self-Report     | 1\. monthly binge eating                                                                                                                                                                                     | 1\. monthly binge eating                                                                                                                                                                                     | 1\. monthly binge eating                                                                                                                                                                                     | 1\. monthly binge eating                                                           |
-|                                                                     |                 | AND 2. At least 3 cognitive symptoms                                                                                                                                                                         | AND 2. At least 3 cognitive symptoms                                                                                                                                                                         | AND 2. At least 3 cognitive symptoms                                                                                                                                                                         | AND 2. Absence of purging                                                          |
-|                                                                     |                 | AND 3. Absence of purging                                                                                                                                                                                    | AND 3. Absence of purging                                                                                                                                                                                    | AND 3. Absence of purging                                                                                                                                                                                    |                                                                                    |
-| Other Specified Feeding and Eating Disorder-other 1 (OSFED-other 1) | Self-Report     | monthly binge eating, purging, excessive exercising or fasting                                                                                                                                               | monthly binge eating, purging, excessive exercising or fasting                                                                                                                                               | monthly binge eating, purging, excessive exercising or fasting                                                                                                                                               | monthly binge eating, purging, excessive exercising or fasting                     |
-| Other Specified Feeding and Eating Disorder-other 2 (OSFED-other 2) | Self-Report     | \< monthly binge eating, purging, excessive exercise or fasting                                                                                                                                              | \< monthly binge eating, purging, excessive exercise or fasting                                                                                                                                              | \< monthly binge eating, purging, excessive exercise or fasting                                                                                                                                              | \< monthly binge eating, purging, excessive exercise or fasting                    |
-|                                                                     |                 | AND weight and shape concern                                                                                                                                                                                 |                                                                                                                                                                                                              |                                                                                                                                                                                                              |                                                                                    |
+| **Table X. Diagnostic Criteria**                                    |                                                                                                                                                                                                              |                                                                                                                                                                                                              |                                                                                                                                                                                                              |                                                                                    |
+|------------|------------|------------|------------|------------|
+| **Diagnoses**                                                       | **Wave 14+**                                                                                                                                                                                                 | **Wave 16+**                                                                                                                                                                                                 | **Wave 18+**                                                                                                                                                                                                 | **Wave 24+**                                                                       |
+| Anorexia Nervosa (AN)                                               | Self-report or objective measured underweight (BMIz \< -1)                                                                                                                                                   | Self-report or objective measured underweight (BMIz \< -1)                                                                                                                                                   | BMI \< 18.5 at age 17.5 (check?)                                                                                                                                                                             | BMI \< 18.5                                                                        |
+|                                                                     | AND 2. self-reported weight and shape concern OR Maladaptive Exercise                                                                                                                                        | AND 2. engaged in fasting for weight loss or to avoid weight gain at least monthly OR maladaptive exercise                                                                                                   | AND Fasting for weight loss or to avoid weight gain at least monthly OR maldaptive exercise                                                                                                                  | AND 2. engaged in fasting for weight loss or to avoid weight gain at least monthly |
+|                                                                     | OR engaged in fasting for weight loss or to avoid weight gain at least monthly                                                                                                                               | OR engaged in excessive exercise                                                                                                                                                                             |                                                                                                                                                                                                              | OR engaged in excessive exercise                                                   |
+|                                                                     | OR engaged in excessive exercise                                                                                                                                                                             |                                                                                                                                                                                                              |                                                                                                                                                                                                              |                                                                                    |
+|                                                                     | 1\. Underweight (BMI\<18.5)                                                                                                                                                                                  | 1\. Underweight (BMI\<18.5)                                                                                                                                                                                  |                                                                                                                                                                                                              |                                                                                    |
+|                                                                     | AND 2. Presence of fear of weight gain AND fat avoidance in the 3 months prior to assessment                                                                                                                 | 2\. Presence of fear of weight gain AND fat avoidance in the 3 months prior to assessment                                                                                                                    |                                                                                                                                                                                                              |                                                                                    |
+| Bulimia Nervosa (BN)                                                | 1.Weekly binge eating                                                                                                                                                                                        | 1.Weekly binge eating                                                                                                                                                                                        | 1.Weekly binge eating                                                                                                                                                                                        | 1.Weekly binge eating                                                              |
+|                                                                     | AND 2. weekly purging                                                                                                                                                                                        | AND 2. weekly purging                                                                                                                                                                                        | AND 2. weekly purging                                                                                                                                                                                        | AND 2. weekly purging                                                              |
+| Binge Eating Disorder (BED)                                         | 1\. Weekly binge eating                                                                                                                                                                                      | 1.Weekly binge eating                                                                                                                                                                                        | 1.Weekly binge eating                                                                                                                                                                                        | 1\. Weekly binge eating                                                            |
+|                                                                     | AND 2. At least 3 cognitive symptoms (eating fast or faster than normal; eating until stomach hurt or they felt sick, eating large amounts when not hungry, eating alone, feeling guilty about amount eaten) | AND 2. At least 3 cognitive symptoms (eating fast or faster than normal; eating until stomach hurt or they felt sick, eating large amounts when not hungry, eating alone, feeling guilty about amount eaten) | AND 2. At least 3 cognitive symptoms (eating fast or faster than normal; eating until stomach hurt or they felt sick, eating large amounts when not hungry, eating alone, feeling guilty about amount eaten) | AND 2. Absence of purging                                                          |
+|                                                                     | AND 3. Absence of purging                                                                                                                                                                                    | AND 3. Absence of purging                                                                                                                                                                                    | AND 3. Absence of purging                                                                                                                                                                                    |                                                                                    |
+| Purging Disorder                                                    | 1\. Purging at least weekly                                                                                                                                                                                  | 1\. Purging at least weekly                                                                                                                                                                                  | 1\. Purging at least weekly                                                                                                                                                                                  | 1\. Purging at least weekly                                                        |
+|                                                                     | 1\. AND 2. Binge eating absent or \< monthly                                                                                                                                                                 | AND 2. Binge eating absent or \< monthly                                                                                                                                                                     | AND 2. Binge eating absent or \< monthly                                                                                                                                                                     | AND 2. Binge eating absent or \< monthly                                           |
+| Sub-threshold BN (Sub-BN)                                           | 1\. monthly binge eating                                                                                                                                                                                     | 1\. monthly binge eating                                                                                                                                                                                     | 1\. monthly binge eating                                                                                                                                                                                     | 1\. monthly binge eating                                                           |
+|                                                                     | AND 2. monthly purging                                                                                                                                                                                       | AND 2. monthly purging                                                                                                                                                                                       | AND 2. monthly purging                                                                                                                                                                                       | AND 2. monthly purging                                                             |
+| Sub-threshold BED (Sub-BED)                                         | 1\. monthly binge eating                                                                                                                                                                                     | 1\. monthly binge eating                                                                                                                                                                                     | 1\. monthly binge eating                                                                                                                                                                                     | 1\. monthly binge eating                                                           |
+|                                                                     | AND 2. At least 3 cognitive symptoms                                                                                                                                                                         | AND 2. At least 3 cognitive symptoms                                                                                                                                                                         | AND 2. At least 3 cognitive symptoms                                                                                                                                                                         | AND 2. Absence of purging                                                          |
+|                                                                     | AND 3. Absence of purging                                                                                                                                                                                    | AND 3. Absence of purging                                                                                                                                                                                    | AND 3. Absence of purging                                                                                                                                                                                    |                                                                                    |
+| Other Specified Feeding and Eating Disorder-other 1 (OSFED-other 1) | monthly binge eating, purging, excessive exercising or fasting                                                                                                                                               | monthly binge eating, purging, excessive exercising or fasting                                                                                                                                               | monthly binge eating, purging, excessive exercising or fasting                                                                                                                                               | monthly binge eating, purging, excessive exercising or fasting                     |
+| Other Specified Feeding and Eating Disorder-other 2 (OSFED-other 2) | \< monthly binge eating, purging, excessive exercise or fasting                                                                                                                                              | \< monthly binge eating, purging, excessive exercise or fasting                                                                                                                                              | \< monthly binge eating, purging, excessive exercise or fasting                                                                                                                                              | \< monthly binge eating, purging, excessive exercise or fasting                    |
+|                                                                     | AND weight and shape concern                                                                                                                                                                                 |                                                                                                                                                                                                              |                                                                                                                                                                                                              |                                                                                    |
